<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:id="@+id/morePropertiesViewId"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/more_prop">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/number_daysTypeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberPickerDays"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerDays"
        android:maxLines="2"
        android:textColor="@color/green_medium"
        android:text="@string/completion_day"
        />

    <EditText
        android:id="@+id/numberPickerDays"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/number_daysTypeLabel"
        app:layout_constraintTop_toTopOf="parent"
        android:text="0"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top|center"
        />

    <CheckBox
        android:id="@+id/checkBoxNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:maxLines="2"
        android:text="@string/show_notifications"
        android:textColor="@color/green_medium"
        app:layout_constraintStart_toEndOf="@id/numberPickerDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/numberPickerDays"
        app:layout_constraintBottom_toBottomOf="@id/numberPickerDays" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/infoNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNotification"
        android:maxLines="2"
        android:textColor="@color/black"
        android:text="@string/completion_day"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/taskTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_task_type"
        android:layout_marginBottom="3dp"
        android:textColor="@color/green_medium"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/infoNotification"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Spinner
        android:id="@+id/taskTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/infoNotification"
        app:layout_constraintStart_toEndOf="@+id/taskTypeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="3dp"
        />

    <TextView
        android:id="@+id/labelStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_date_start"
        android:textColor="@color/green_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/DateStartTask"
        app:layout_constraintTop_toTopOf="@+id/DateStartTask"
        app:layout_constraintBottom_toBottomOf="@+id/DateStartTask" />

    <!-- Start Date TextView -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/DateStartTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/green_medium"
        app:layout_constraintStart_toEndOf="@+id/labelStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTypeSpinner"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/labelEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_end_start"
        android:textColor="@color/green_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/DateEndTask"
        app:layout_constraintTop_toTopOf="@+id/DateEndTask"
        app:layout_constraintBottom_toBottomOf="@+id/DateEndTask" />

    <!-- End Date TextView -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/DateEndTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/green_medium"
        app:layout_constraintStart_toEndOf="@+id/labelEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateStartTask"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:id="@+id/checkBoxCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:textColor="@color/green_medium"
        app:layout_constraintTop_toBottomOf="@+id/DateEndTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>