<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_top_corners"
    tools:context=".tabs.PanelEditTask">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/task_editing"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Task Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditNameTask"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/green_medium"
                app:hintEnabled="true"
                android:hint="@string/name_task">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNameTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Task Description Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditInfoTask"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sectionEditNameTask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/green_medium"
                android:hint="@string/task_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editInfoTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Task Type Selector -->
            <TextView
                android:id="@+id/taskTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_choose_task_type"
                android:textColor="@color/green_medium"
                app:layout_constraintTop_toBottomOf="@+id/sectionEditInfoTask"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/taskTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/taskTypeLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <!-- Task Date Range Inputs -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dateInputsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/taskTypeSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/labelStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_date_start"
                    android:textColor="@color/green_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/DateStartTask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green_medium"
                    app:layout_constraintStart_toEndOf="@+id/labelStartDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/labelStartDate"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:id="@+id/labelEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_end_start"
                    android:textColor="@color/green_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelStartDate"
                    android:layout_marginTop="8dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/DateEndTask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green_medium"
                    app:layout_constraintStart_toEndOf="@+id/labelEndDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/labelEndDate"
                    android:layout_marginStart="8dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Completion Checkbox -->
            <CheckBox
                android:id="@+id/checkBoxCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textColor="@color/green_medium"
                app:layout_constraintTop_toBottomOf="@+id/dateInputsLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"/>

            <!-- Save Button -->
            <Button
                android:id="@+id/finishEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/green_medium"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxCompleted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>