<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.Login">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/green_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal|top"
            android:textStyle="bold"
            android:text="@string/uix"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/app_for_task"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal|top"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHead" />

    </FrameLayout>

    <View
        android:id="@+id/sep_gold"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/separator_gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <View
        android:id="@+id/oval_blue"
        android:layout_width="20dp"
        android:background="@drawable/urgent_blue"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sep_gold"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/important"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sep_gold"
        app:layout_constraintLeft_toRightOf="@+id/oval_blue"/>

    <View
        android:id="@+id/oval_red"
        android:layout_width="20dp"
        android:background="@drawable/urgent_and_important_3"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oval_blue"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvIU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imp_and_urgent"
        android:textColor="@color/red"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@+id/oval_red"
        app:layout_constraintTop_toBottomOf="@+id/tv" />


    <View
        android:id="@+id/oval_green"
        android:layout_width="20dp"
        android:background="@drawable/relax_urg"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oval_red"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_not_IU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_imp_and_urgen"
        android:textColor="@color/green_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@+id/oval_green"
        app:layout_constraintTop_toBottomOf="@+id/tvIU" />

    <View
        android:id="@+id/oval_gold"
        android:layout_width="20dp"
        android:background="@drawable/urgent_urg"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oval_green"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/urgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urgent"
        android:textColor="@color/gold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@+id/oval_green"
        app:layout_constraintTop_toBottomOf="@+id/tv_not_IU" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/urgent" />

</androidx.constraintlayout.widget.ConstraintLayout>